feat: implementation of functions for remove spans message in aplication e validation of entry values

--- a/main.htm
+++ b/main.htm
@@ -14,10 +14,11 @@
             <div class="card-body">
                 <div class="input-group mb-3">
                     <input class="form-control" name="form-control" type="text" placeholder="Crie uma tarefa...">
-                    <button class="btn btn-primary">+</button>
+                    <div class="input-group-append">
+                        <button class="btn btn-primary">Adicionar</button>
+                    </div>
                 </div>
-                <ul id="taskList" class="list-group">
-                </ul>
+                <ul id="taskList" class="list-group"></ul>
             </div>
         </div>
     </div>
